# primertran

./: LICENSE  README.md
code/: README.md  pyproject.toml
code/primertran/: __init__.py  agent.py  cli.py  config.py  prompts.py  repl.py
code/primertran/providers/: __init__.py  base.py  deepseek.py
code/tests/: test_agent.py  test_config.py  test_prompts.py  test_repl.py
doc/: PrimerTran产品方案.md  PyPI发布流程.md
