[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primertran"
version = "0.1.0"
description = "English to Chinese AI translation agent CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "prompt-toolkit>=3.0.47",
  "rich>=13.7.1",
  "tomlkit>=0.13.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
primertran = "primertran.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["primertran"]

[tool.hatch.build.targets.sdist]
include = [
  "/primertran",
  "/tests",
  "/README.md",
  "/pyproject.toml",
]
